# mcp-deployment-test

./: main.py  pyproject.toml
src/mcpserver/: __main__.py  deployment.py
